corrected justifying and aligning mistakes

--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -66,8 +66,8 @@
     margin: 0;
   }
   .input {
-    width: 440px;
-    height: 120px;
+    width: 420px;
+    height: 110px;
     border-radius: 20px;
     font-size: 42px;
   }
